--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,10 @@
 3. need to make more effors into why my stuff is not working 
 4.residual plots ore whateve or something also want to finsh that web page 
 5. more reading and stuff done on the fires and why the data is like that
+
+
+    4 variables: 
+        climate -local wather
+        vegetation
+        topography
+        socioeconomic 
