--- a/Testing Arcgis.ipynb
+++ b/Testing Arcgis.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "import arcgis\n",
-    "import os \n",
+    "import arcgis\r\n",
+    "import os \r\n",
     "import matplotlib as plt"
    ],
    "outputs": [],
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "arcgis."
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
