some more economic data

--- a/Adding more data.ipynb
+++ b/Adding more data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
     "#trying to add population stats \n",
     "#trying to add income or prduction stats \n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "source": [
     "df =pd.read_csv(r'data/new_fire_weather_data.csv')\n",
     "xl=pd.ExcelFile(r'data/cali_data_pile.xlsx')\n",
@@ -28,37 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "source": [
-    "xl.sheet_names\n",
-    "pag1 =pd.read_excel(xl,xl.sheet_names[2])\n",
-    "pop_xl.head\n"
+    "\n",
+    "people_page =pd.read_excel(xl,xl.sheet_names[1])\n"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of        county           Sub-county  year   population\n",
-       "0     Alameda               Albany   2010       18481\n",
-       "1     Alameda             Berkeley   2010      112363\n",
-       "2     Alameda               Dublin   2010       45681\n",
-       "3     Alameda           Emeryville   2010        9795\n",
-       "4     Alameda              Fremont   2010      213524\n",
-       "...       ...                  ...    ...         ...\n",
-       "4847     Yolo              Winters   2018        7292\n",
-       "4848     Yolo             Woodland   2018       60426\n",
-       "4849     Yuba           Marysville   2018       11883\n",
-       "4850     Yuba  Unincorporated Yuba   2018       59347\n",
-       "4851     Yuba            Wheatland   2018        3497\n",
-       "\n",
-       "[4852 rows x 4 columns]>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 55
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -2408,6 +2383,52 @@
    "cell_type": "code",
    "execution_count": 82,
    "source": [
+    "df.to_csv(\"data/new_fire_weather_data.csv\")"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "source": [
+    "household_income_county=[]\n",
+    "my_dict =dict()\n",
+    "for i in range(len(df)):\n",
+    "    temp=df.incident_county.iloc[i]\n",
+    "    \n",
+    "    total =0\n",
+    "    if my_dict.__contains__(temp):\n",
+    "        total=my_dict.get(temp)\n",
+    "    else:  \n",
+    "        for j in range(len(people_page)):\n",
+    "            if temp == people_page.County.iloc[j]:\n",
+    "                my_dict[temp]=int(people_page[\"Median Household Income (2017)\"].iloc[j])\n",
+    "                total=people_page[\"Median Household Income (2017)\"].iloc[j]\n",
+    "    household_income_county.append(total)\n",
+    "                \n",
+    "\n",
+    "    \n",
+    "    "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "df[\"county_income\"]=household_income_county"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "\n",
+    "df =df.drop(columns=[\"Unnamed: 0\",\"Unnamed: 0.1\"])\n",
     "df.to_csv(\"data/new_fire_weather_data.csv\")"
    ],
    "outputs": [],
