--- a/Adding more data.ipynb
+++ b/Adding more data.ipynb
@@ -2433,6 +2433,485 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "#cleaning up same data\n",
+    "dropped_rows =[]\n",
+    "for i in range(len(df.county_population)):\n",
+    "    if df.county_population.iloc[i] ==0:\n",
+    "        dropped_rows.append(i)\n",
+    "dropped_rows "
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[10,\n",
+       " 27,\n",
+       " 73,\n",
+       " 150,\n",
+       " 163,\n",
+       " 253,\n",
+       " 316,\n",
+       " 446,\n",
+       " 578,\n",
+       " 755,\n",
+       " 756,\n",
+       " 757,\n",
+       " 797,\n",
+       " 926,\n",
+       " 980,\n",
+       " 996,\n",
+       " 998,\n",
+       " 1041,\n",
+       " 1079,\n",
+       " 1136,\n",
+       " 1198,\n",
+       " 1222,\n",
+       " 1258]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "df =df.drop(dropped_rows)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
+       "      <th>incident_name</th>\n",
+       "      <th>incident_date_created</th>\n",
+       "      <th>incident_administrative_unit</th>\n",
+       "      <th>incident_county</th>\n",
+       "      <th>incident_location</th>\n",
+       "      <th>incident_acres_burned</th>\n",
+       "      <th>incident_cooperating_agencies</th>\n",
+       "      <th>incident_longitude</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Min Temperature</th>\n",
+       "      <th>Dew Point</th>\n",
+       "      <th>Precipitation</th>\n",
+       "      <th>Snowdepth</th>\n",
+       "      <th>Wind</th>\n",
+       "      <th>Gust Wind</th>\n",
+       "      <th>Sea Level Pressure</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>county_population</th>\n",
+       "      <th>county_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Bridge Fire</td>\n",
+       "      <td>2017-10-31 11:22:00</td>\n",
+       "      <td>Shasta-Trinity National Forest</td>\n",
+       "      <td>Shasta</td>\n",
+       "      <td>I-5 and Turntable Bay, 7 miles NE of Shasta Lake</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Shasta-Trinity National Forest</td>\n",
+       "      <td>-122.309000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>48.43</td>\n",
+       "      <td>44.86</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.52</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>29.36</td>\n",
+       "      <td>341.285980</td>\n",
+       "      <td>178148</td>\n",
+       "      <td>51207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fawnskin Fire</td>\n",
+       "      <td>2013-04-20 17:30:00</td>\n",
+       "      <td>San Bernardino National Forest</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>west of Delamar Mountain, north of the communi...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>San Bernardino National Forest</td>\n",
+       "      <td>-116.941311</td>\n",
+       "      <td>...</td>\n",
+       "      <td>51.57</td>\n",
+       "      <td>27.11</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>28.74</td>\n",
+       "      <td>2411.368408</td>\n",
+       "      <td>2085944</td>\n",
+       "      <td>60270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Gold Fire</td>\n",
+       "      <td>2013-04-30 12:59:00</td>\n",
+       "      <td>CAL FIRE Madera-Mariposa-Merced Unit</td>\n",
+       "      <td>Madera</td>\n",
+       "      <td>Between Road 210 and Road 200 near Fine Gold C...</td>\n",
+       "      <td>274</td>\n",
+       "      <td>CAL FIRE Madera-Mariposa-Merced Unit</td>\n",
+       "      <td>-119.635004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.29</td>\n",
+       "      <td>40.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.08</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>29.51</td>\n",
+       "      <td>484.616089</td>\n",
+       "      <td>151338</td>\n",
+       "      <td>50783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Silverado Fire</td>\n",
+       "      <td>2013-04-30 23:44:00</td>\n",
+       "      <td>CAL FIRE Sonoma-Lake-Napa Unit</td>\n",
+       "      <td>Napa</td>\n",
+       "      <td>7300 block of Silverado Trail, north of Napa</td>\n",
+       "      <td>75</td>\n",
+       "      <td>CAL FIRE Sonoma-Lake-Napa Unit</td>\n",
+       "      <td>-122.350844</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47.00</td>\n",
+       "      <td>39.54</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>29.72</td>\n",
+       "      <td>66.241211</td>\n",
+       "      <td>138838</td>\n",
+       "      <td>83881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Yellow Fire</td>\n",
+       "      <td>2013-05-01 02:01:00</td>\n",
+       "      <td>CAL FIRE Sonoma-Lake-Napa Unit</td>\n",
+       "      <td>Sonoma</td>\n",
+       "      <td>Hwy 128 &amp; Yellow Jacket Ranch Rd in Knights Va...</td>\n",
+       "      <td>125</td>\n",
+       "      <td>CAL FIRE Sonoma-Lake-Napa Unit</td>\n",
+       "      <td>-122.655616</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47.00</td>\n",
+       "      <td>39.54</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>29.72</td>\n",
+       "      <td>255.670990</td>\n",
+       "      <td>491980</td>\n",
+       "      <td>79511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1261</th>\n",
+       "      <td>1261</td>\n",
+       "      <td>1261</td>\n",
+       "      <td>Sheep Fire</td>\n",
+       "      <td>2020-08-22 22:02:57</td>\n",
+       "      <td>Unified Command: Plumas National Forest, Lasse...</td>\n",
+       "      <td>Plumas</td>\n",
+       "      <td>Gold Run Road, Southwest of Susanville in Plum...</td>\n",
+       "      <td>29570</td>\n",
+       "      <td>Plumas National Forest</td>\n",
+       "      <td>-120.757000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>59.29</td>\n",
+       "      <td>51.48</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>29.11</td>\n",
+       "      <td>1614.909912</td>\n",
+       "      <td>19773</td>\n",
+       "      <td>51756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1262</th>\n",
+       "      <td>1262</td>\n",
+       "      <td>1262</td>\n",
+       "      <td>Hobo Fire</td>\n",
+       "      <td>2020-09-01 09:37:58</td>\n",
+       "      <td>Shasta Trinity National Forest</td>\n",
+       "      <td>Trinity</td>\n",
+       "      <td>East Fork Rd and Barney Gulch Rd, north of Helena</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Shasta Trinity National Forest</td>\n",
+       "      <td>-123.124610</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.86</td>\n",
+       "      <td>52.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.10</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>29.34</td>\n",
+       "      <td>508.523529</td>\n",
+       "      <td>13635</td>\n",
+       "      <td>40676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1263</th>\n",
+       "      <td>1263</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>Oak Fire</td>\n",
+       "      <td>2020-09-07 13:26:45</td>\n",
+       "      <td>CAL FIRE MEU Mendocino Unit</td>\n",
+       "      <td>Mendocino</td>\n",
+       "      <td>West of Highway 101--Big John Road &amp; Skyview R...</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>CAL FIRE Mendocino Unit , Cooperating Agencies...</td>\n",
+       "      <td>-123.396500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>55.14</td>\n",
+       "      <td>51.73</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>29.72</td>\n",
+       "      <td>588.767822</td>\n",
+       "      <td>89299</td>\n",
+       "      <td>50453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1264</th>\n",
+       "      <td>1264</td>\n",
+       "      <td>1264</td>\n",
+       "      <td>Willow Fire</td>\n",
+       "      <td>2020-09-09 06:04:43</td>\n",
+       "      <td>CAL FIRE Nevada-Yuba-Placer Unit</td>\n",
+       "      <td>Yuba</td>\n",
+       "      <td>Neptune Lane and Willow Glen Road, North of Sm...</td>\n",
+       "      <td>1311</td>\n",
+       "      <td>Cooperating Agencies: CHP, LINDA FIRE, BEALE A...</td>\n",
+       "      <td>-121.323610</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.71</td>\n",
+       "      <td>53.65</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.98</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>29.80</td>\n",
+       "      <td>402.864044</td>\n",
+       "      <td>74727</td>\n",
+       "      <td>53822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1265</th>\n",
+       "      <td>1265</td>\n",
+       "      <td>1265</td>\n",
+       "      <td>Schoolhouse Fire</td>\n",
+       "      <td>2020-09-09 15:59:31</td>\n",
+       "      <td>CAL FIRE Siskiyou Unit</td>\n",
+       "      <td>Siskiyou</td>\n",
+       "      <td>Schoolhouse Gap Rd And McAdams Creek Rd</td>\n",
+       "      <td>45</td>\n",
+       "      <td>CAL FIRE Siskiyou Unit</td>\n",
+       "      <td>-122.840570</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.29</td>\n",
+       "      <td>35.52</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>28.57</td>\n",
+       "      <td>972.013062</td>\n",
+       "      <td>44612</td>\n",
+       "      <td>44013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1243 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0  Unnamed: 0.1     incident_name incident_date_created  \\\n",
+       "0              0             0       Bridge Fire   2017-10-31 11:22:00   \n",
+       "1              1             1     Fawnskin Fire   2013-04-20 17:30:00   \n",
+       "2              2             2         Gold Fire   2013-04-30 12:59:00   \n",
+       "3              3             3    Silverado Fire   2013-04-30 23:44:00   \n",
+       "4              4             4       Yellow Fire   2013-05-01 02:01:00   \n",
+       "...          ...           ...               ...                   ...   \n",
+       "1261        1261          1261       Sheep Fire    2020-08-22 22:02:57   \n",
+       "1262        1262          1262        Hobo Fire    2020-09-01 09:37:58   \n",
+       "1263        1263          1263          Oak Fire   2020-09-07 13:26:45   \n",
+       "1264        1264          1264       Willow Fire   2020-09-09 06:04:43   \n",
+       "1265        1265          1265  Schoolhouse Fire   2020-09-09 15:59:31   \n",
+       "\n",
+       "                           incident_administrative_unit incident_county  \\\n",
+       "0                       Shasta-Trinity National Forest           Shasta   \n",
+       "1                        San Bernardino National Forest  San Bernardino   \n",
+       "2                  CAL FIRE Madera-Mariposa-Merced Unit          Madera   \n",
+       "3                        CAL FIRE Sonoma-Lake-Napa Unit            Napa   \n",
+       "4                        CAL FIRE Sonoma-Lake-Napa Unit          Sonoma   \n",
+       "...                                                 ...             ...   \n",
+       "1261  Unified Command: Plumas National Forest, Lasse...          Plumas   \n",
+       "1262                    Shasta Trinity National Forest          Trinity   \n",
+       "1263                        CAL FIRE MEU Mendocino Unit       Mendocino   \n",
+       "1264                  CAL FIRE Nevada-Yuba-Placer Unit             Yuba   \n",
+       "1265                             CAL FIRE Siskiyou Unit        Siskiyou   \n",
+       "\n",
+       "                                      incident_location  \\\n",
+       "0     I-5 and Turntable Bay, 7 miles NE of Shasta Lake    \n",
+       "1     west of Delamar Mountain, north of the communi...   \n",
+       "2     Between Road 210 and Road 200 near Fine Gold C...   \n",
+       "3          7300 block of Silverado Trail, north of Napa   \n",
+       "4     Hwy 128 & Yellow Jacket Ranch Rd in Knights Va...   \n",
+       "...                                                 ...   \n",
+       "1261  Gold Run Road, Southwest of Susanville in Plum...   \n",
+       "1262  East Fork Rd and Barney Gulch Rd, north of Helena   \n",
+       "1263  West of Highway 101--Big John Road & Skyview R...   \n",
+       "1264  Neptune Lane and Willow Glen Road, North of Sm...   \n",
+       "1265            Schoolhouse Gap Rd And McAdams Creek Rd   \n",
+       "\n",
+       "      incident_acres_burned  \\\n",
+       "0                        37   \n",
+       "1                        30   \n",
+       "2                       274   \n",
+       "3                        75   \n",
+       "4                       125   \n",
+       "...                     ...   \n",
+       "1261                  29570   \n",
+       "1262                      0   \n",
+       "1263                   1100   \n",
+       "1264                   1311   \n",
+       "1265                     45   \n",
+       "\n",
+       "                          incident_cooperating_agencies  incident_longitude  \\\n",
+       "0                       Shasta-Trinity National Forest          -122.309000   \n",
+       "1                        San Bernardino National Forest         -116.941311   \n",
+       "2                  CAL FIRE Madera-Mariposa-Merced Unit         -119.635004   \n",
+       "3                        CAL FIRE Sonoma-Lake-Napa Unit         -122.350844   \n",
+       "4                        CAL FIRE Sonoma-Lake-Napa Unit         -122.655616   \n",
+       "...                                                 ...                 ...   \n",
+       "1261                             Plumas National Forest         -120.757000   \n",
+       "1262                     Shasta Trinity National Forest         -123.124610   \n",
+       "1263  CAL FIRE Mendocino Unit , Cooperating Agencies...         -123.396500   \n",
+       "1264  Cooperating Agencies: CHP, LINDA FIRE, BEALE A...         -121.323610   \n",
+       "1265                             CAL FIRE Siskiyou Unit         -122.840570   \n",
+       "\n",
+       "      ...  Min Temperature Dew Point Precipitation Snowdepth  Wind  Gust Wind  \\\n",
+       "0     ...            48.43     44.86          0.02       0.0  5.52       2.84   \n",
+       "1     ...            51.57     27.11          0.00       0.0  6.40       4.59   \n",
+       "2     ...            63.29     40.10          0.00       0.0  6.08       0.60   \n",
+       "3     ...            47.00     39.54          0.00       0.0  5.01       2.21   \n",
+       "4     ...            47.00     39.54          0.00       0.0  5.01       2.21   \n",
+       "...   ...              ...       ...           ...       ...   ...        ...   \n",
+       "1261  ...            59.29     51.48          0.01       0.0  4.58       0.00   \n",
+       "1262  ...            66.86     52.06          0.00       0.0  5.10       2.65   \n",
+       "1263  ...            55.14     51.73          0.00       0.0  2.73       0.51   \n",
+       "1264  ...            63.71     53.65          0.00       0.0  5.98       2.70   \n",
+       "1265  ...            57.29     35.52          0.00       0.0  4.18       2.36   \n",
+       "\n",
+       "      Sea Level Pressure    elevation  county_population  county_income  \n",
+       "0                  29.36   341.285980             178148          51207  \n",
+       "1                  28.74  2411.368408            2085944          60270  \n",
+       "2                  29.51   484.616089             151338          50783  \n",
+       "3                  29.72    66.241211             138838          83881  \n",
+       "4                  29.72   255.670990             491980          79511  \n",
+       "...                  ...          ...                ...            ...  \n",
+       "1261               29.11  1614.909912              19773          51756  \n",
+       "1262               29.34   508.523529              13635          40676  \n",
+       "1263               29.72   588.767822              89299          50453  \n",
+       "1264               29.80   402.864044              74727          53822  \n",
+       "1265               28.57   972.013062              44612          44013  \n",
+       "\n",
+       "[1243 rows x 26 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
