Small Changes before repo goes public

--- a/Trying out EEWeather.ipynb
+++ b/Trying out EEWeather.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "api_key=\"AIzaSyB7Hk_IEsxv1AtMi4_9oYAyfCTeiIEN8aQ\"\n",
+    "#does not work any more\n",
     "#http://maps.googleapis.com/maps/api/geocode/json?latlng=40.714224,-73.961452&sensor=true&key=YOUR_KEY\n",
     "\n",
     "#example of the call for weather\n",
