--- a/Adding more data.ipynb
+++ b/Adding more data.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#trying to add population stats \n",
     "#trying to add income or prduction stats \n",
@@ -11,59 +13,37 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import openpyxl"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df =pd.read_csv(r'data/new_fire_weather_data.csv')\n",
     "xl=pd.ExcelFile(r'data/cali_data_pile.xlsx')\n",
     "pop_xl =pd.read_excel(r'data/population_by_county.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "people_page =pd.read_excel(xl,xl.sheet_names[1])\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "source": [
-    "#add a columns into the df for population\n",
-    "#print(df.dtypes)\n",
-    "df.incident_dateonly_created=  pd.to_datetime(df.incident_dateonly_created)\n",
-    "pops =[]\n",
-    "\n",
-    "for i in range(df.shape[0]):\n",
-    "    #print(df.incident_county.iloc[i])\n",
-    "    #print(df.incident_dateonly_created.iloc[i].year)\n",
-    "    \n",
-    "    total =0\n",
-    "    for j in range(len(pop_xl)): \n",
-    "\n",
-    "        \n",
-    "        if df.incident_county.iloc[i] ==pop_xl.county.iloc[j]:\n",
-    "            if df.incident_dateonly_created.iloc[i].year==pop_xl[\"year \"].iloc[j] or (df.incident_dateonly_created.iloc[i].year >2018 and pop_xl[\"year \"].iloc[j] ==2018):\n",
-    "                total+=int(pop_xl.population.iloc[j])\n",
-    "    pops.append(total)\n",
-    "    print(total)\n",
-    "pops "
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "178148\n",
       "2085944\n",
@@ -1334,7 +1314,6 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[178148,\n",
@@ -2340,23 +2319,39 @@
        " ...]"
       ]
      },
+     "execution_count": 83,
      "metadata": {},
-     "execution_count": 83
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "#add a columns into the df for population\n",
+    "#print(df.dtypes)\n",
+    "df.incident_dateonly_created=  pd.to_datetime(df.incident_dateonly_created)\n",
+    "pops =[]\n",
+    "\n",
+    "for i in range(df.shape[0]):\n",
+    "    #print(df.incident_county.iloc[i])\n",
+    "    #print(df.incident_dateonly_created.iloc[i].year)\n",
+    "    \n",
+    "    total =0\n",
+    "    for j in range(len(pop_xl)): \n",
+    "\n",
+    "        \n",
+    "        if df.incident_county.iloc[i] ==pop_xl.county.iloc[j]:\n",
+    "            if df.incident_dateonly_created.iloc[i].year==pop_xl[\"year \"].iloc[j] or (df.incident_dateonly_created.iloc[i].year >2018 and pop_xl[\"year \"].iloc[j] ==2018):\n",
+    "                total+=int(pop_xl.population.iloc[j])\n",
+    "    pops.append(total)\n",
+    "    print(total)\n",
+    "pops "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "source": [
-    "\n",
-    "df[\"county_population\"] =pops\n",
-    "df.county_population"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0        178148\n",
@@ -2373,24 +2368,31 @@
        "Name: county_population, Length: 1266, dtype: int64"
       ]
      },
+     "execution_count": 84,
      "metadata": {},
-     "execution_count": 84
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "\n",
+    "df[\"county_population\"] =pops\n",
+    "df.county_population"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.to_csv(\"data/new_fire_weather_data.csv\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "household_income_county=[]\n",
     "my_dict =dict()\n",
@@ -2410,44 +2412,34 @@
     "\n",
     "    \n",
     "    "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df[\"county_income\"]=household_income_county"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "#df =df.drop(columns=[\"Unnamed: 0\",\"Unnamed: 0.1\"])\n",
     "df.to_csv(\"data/new_fire_weather_data.csv\",index=False)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "#cleaning up same data\n",
-    "dropped_rows =[]\n",
-    "for i in range(len(df.county_population)):\n",
-    "    if df.county_population.iloc[i] ==0:\n",
-    "        dropped_rows.append(i)\n",
-    "dropped_rows "
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[10,\n",
@@ -2475,28 +2467,35 @@
        " 1258]"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "#cleaning up same data\n",
+    "dropped_rows =[]\n",
+    "for i in range(len(df.county_population)):\n",
+    "    if df.county_population.iloc[i] ==0:\n",
+    "        dropped_rows.append(i)\n",
+    "dropped_rows "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df =df.drop(dropped_rows)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "source": [],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -2918,34 +2917,35 @@
        "[1243 rows x 24 columns]"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
-  },
-  "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
